# INSIGHT

./: .gitattributes  Prompt.md  README.md  ROBUSTNESS_AUDIT.md
.github/workflows/: frontend-tests.yml  nlp-pipeline.yml  python-tests.yml
client/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js  vitest.config.js
client/src/: App.jsx  App.scss  App.test.jsx  index.css
client/src/__tests__/: greeting-fix.test.jsx
client/src/api/: api.js  socket.js
client/src/context/: AuthContext.jsx  AuthContext.test.jsx
client/src/styles/: _variables.scss
client/src/test/: setup.js
client/src/tests/: App.test.jsx
client/src/utils/: errorHandler.js
documentation/: README.md  test-oracles-results.md
server/: Procfile  README.md  advanced_nlp_analyzer.py  anthropic_analyzer.py  api.py  app.py  check_deployment.py  claude_analyzer.py  main.py  models.py  mongodb_store.py  nlp_analyzer.py  nltk.txt  openai_analyzer.py  pyproject.toml  reddit_scraper.py  requirements.txt  routes.py  security.py  test_anthropic_integration.py  utils.py
server/scripts/: clear_users.py  generate_nlp_report.py  run_nlp_pipeline.py  verify_nlp_results.py
server/tests/: conftest.py  test_api_endpoints.py  test_basic.py  test_claude_analyzer.py  test_cors.py  test_cors_browser_simulation.py  test_cors_error_conditions.py  test_mongodb_store.py  test_per_user_scraping.py  test_reddit_scraper.py  test_scrape_e2e.py  test_security.py  test_security_fixes.py  test_security_production.py  test_user_system.py
server/utils/: circuit_breaker.py
(+74 files in other folders)
