[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Reddit Painpoint Analyzer Backend"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.34.0",
    "bcrypt>=4.3.0",
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-cors>=5.0.1",
    "flask-login>=0.6.3",
    "flask-restful>=0.3.10",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "nltk>=3.9.1",
    "numpy>=1.26.4",
    "pandas>=2.2.0",
    "praw>=7.8.1",
    "psycopg2-binary>=2.9.10",
    "pymongo>=4.11.3",
    "PyJWT>=2.10.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "scikit-learn>=1.5.2",
    "scipy>=1.16.3",
    "trafilatura>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "responses>=0.23.0",
]
